--- a/index.html
+++ b/index.html
@@ -11,7 +11,46 @@
     </head>
     <body> 
             <html>
-                  
+
+            <!-- Üst Header bölümü başlangıç -->
+	<section class="top_header_area">
+	    <div class="container">
+            <ul class="nav navbar-nav top_nav">
+                <li><a href="tel:05345185280"><i class="fa fa-phone"></i>+90 (534) 518 52 80</a></li>
+                <li><a href="mailto:destek@batuhangormus.com"><i class="fa fa-envelope-o"></i>batuhangormus404@gmail.com</a></li>
+            </ul>
+			<ul class="nav navbar-nav navbar-right social_nav">
+                <li><a href="https://www.facebook.com/batuhann.gormus"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                <li><a href="https://www.instagram.com/batuhngrms/?hl=tr"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                <li><a href="https://twitter.com/batuhngormus"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>  
+            </ul>
+	    </div>
+	</section>
+                  <!-- Web site menü bölümü -->
+            <div class="col-md-10 p0">
+                <div class="collapse navbar-collapse" id="min_navbar">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li class="dropdown submenu">
+                            <li><a href="index.html">Anasayfa</a></li>
+                            <ul class="dropdown-menu">
+                                
+                            </ul>
+                        </li>
+                        <li class="dropdown submenu">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Hakkımda</a>
+                            <ul class="dropdown-menu other_dropdwn">
+                                <li><a href="hakkimda.html">Ben Kimim?</a></li>
+								<li><a href="haberler.html">Haberler</a></li>
+                            </ul>
+                        </li>
+                        <li class="dropdown submenu">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Hİzmetlerİmİz</a>
+                            <ul class="dropdown-menu other_dropdwn">
+                                <li><a href="sosyalmedya.html">Sosyal Medya Yönetİmİ</a></li>
+								<li><a href="webtasarim.html">Web Tasarım</a></li>
+                            </ul>
+                        </li>
+
             <div class="logo" ><img src="logo.jpg" width="300" height="100"/></div>
                     <div class="topnav">
 
